<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mm.ui.classroom1.FirstClassroomFragment"
        android:label="@string/classroom1"
        tools:layout="@layout/fragment_classroom1" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mm.ui.classroom2.SecondClassroomFragment"
        android:label="@string/classroom2"
        tools:layout="@layout/fragment_classroom2" />
</navigation>